# Test

./: about.html  about.rst  archive.html  contact.html  contact.markdown  estilos.css  index.html  miblog.cabal
css/: default.css
posts/: 2018-12-20-01-example.html  2018-12-20-01-example.md  2018-12-21-01-prueba.html  2018-12-21-01-prueba.md
templates/: archive.html  default.html
