name:                miblog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/analiaz/analiaz.github.io
license:             GPL
license-file:        LICENSE
author:              Analia Lujan Zunino
maintainer:          analiazunino@gmail.com
copyright:           2018 Analia Lujan Zunino
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable miblog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
